Meets requirements for lab07

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 </head>>
 <html>
 <body>
-<div id='div1'>
+<table id='container'>
 
-</div>
-<script src="app.js"></script>
+</table>
+<script src="js/app.js"></script>
 </body>
 </html>
