--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
-</head>>
+</head>
 <html>
 <body>
 <table id='container'>
-
+<!--filled in with JS-->
 </table>
 <script src="js/app.js"></script>
 </body>
