--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<head>
-</head>
 <html>
+<head>
+    <title>Salmon Cookies</title>
+    <link rel="stylesheet" href="css/stylesheet.css">
+</head>
+<header>
+    <ul>
+        <li\>
+            <img src="images/chinook.jpg" height="100" width="160">
+        </li>
+        <li>
+            <img src="images/cutter.jpg" height="100" width="160">
+        </li>
+        <li>
+            <img src="images//family.jpg" height="100" width="160">
+        </li>
+        <li>
+            <img src="images/fish.jpg" height="100" width="160">
+        </li>
+        <li>
+            <img src="images/frosted-cookie.jpg" height="100" width="160">
+        </li>
+        <li>
+            <img src="images/salmon.png" height="100" width="160">
+        </li>
+        <li>
+            <img src="images/shirt.jpg" height="100" width="160">
+        </li>
+    </ul>
+</header>
 <body>
-<table id='container'>
-<!--filled in with JS-->
-</table>
-<script src="js/app.js"></script>
+    <article>
+        <h3>Seattle</h3>
+        <ul>
+            <li>1481 Pike St, Seattle, WA 98101</li>
+            <li>Open 6AM-8PM</li>
+            <li>206-555-1584</li>
+        </ul>
+    </article>
+    <article>
+        <h3>Tokyo</h3>
+        <ul>
+            <li>134 Wakarimasen Avenue, Meguro, Tokyo</li>
+            <li>Open 6AM-8PM</li>
+            <li>+81 784-555-2183</li>
+        </ul>
+    </article>
+    <article>
+        <h3>Dubai</h3>
+        <ul>
+            <li>8585 Al Albaany St, Dubai, UAE</li>
+            <li>Open 6AM-8PM</li>
+            <li>+971 588-555-8955</li>
+        </ul>
+    </article>
+    <article>
+        <h3>Paris</h3>
+        <ul>
+            <li>1884 Baquette Ave, Paris, FR</li>
+            <li>Open 6AM-8PM</li>
+            <li>+33 204-555-8666</li>
+        </ul>
+    </article>
+    <article>
+        <h3>Lima</h3>
+        <ul>
+            <li>757 Pisco Llama St, Lima, Peru</li>
+            <li>Open 6AM-8PM</li>
+            <li>+51 243-555-8664</li>
+        </ul>
+    </article>
+
 </body>
 </html>
