--- a/sales.html
+++ b/sales.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <head>
+    <title>Cookie Sales</title>
 </head>
 <html>
 <body>
-<table id='container'>
-<!--filled in with JS-->
-</table>
-<script src="js/app.js"></script>
+    <table id='container'>
+    <!--filled in with JS-->
+    </table>
+    <form id="cookie-stand-form">
+        <fieldset>
+            <label for="storeCity">
+                City
+                <input name="storeCity" type="text">
+            </label>
+
+            <label for="storeMaxCustomers">
+                Max Customers Per Hour
+                <input name="storeMaxCustomers" type="text">
+            </label>
+
+            <label for="storeMinCustomers">
+                Min Customers Per Hour
+                <input name="storeMinCustomers" type="text">
+            </label>
+
+            <label for="storeAverageSale">
+                Average Customer Purchase
+                <input name="storeAverageSale" type="text">
+            </label>
+            <button>Submit</button>
+        </fieldset>
+    </form>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
