fixes bug so sales data actually works and meets minimum requirements for the css portion

--- a/index.html
+++ b/index.html
@@ -3,27 +3,11 @@
 <head>
     <title>Salmon Cookies</title>
     <link rel="stylesheet" href="css/stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Calistoga&display=swap" rel="stylesheet">
 </head>
 <header>
+    <img src="images/salmon.png" height="400" width="1200">
     <ul>
-        <li\>
-            <img src="images/chinook.jpg" height="100" width="160">
-        </li>
-        <li>
-            <img src="images/cutter.jpg" height="100" width="160">
-        </li>
-        <li>
-            <img src="images//family.jpg" height="100" width="160">
-        </li>
-        <li>
-            <img src="images/fish.jpg" height="100" width="160">
-        </li>
-        <li>
-            <img src="images/frosted-cookie.jpg" height="100" width="160">
-        </li>
-        <li>
-            <img src="images/salmon.png" height="100" width="160">
-        </li>
         <li>
             <img src="images/shirt.jpg" height="100" width="160">
         </li>
@@ -33,6 +17,7 @@
     <article>
         <h3>Seattle</h3>
         <ul>
+            <li><img src="images/chinook.jpg" height="100" width="160"></li>
             <li>1481 Pike St, Seattle, WA 98101</li>
             <li>Open 6AM-8PM</li>
             <li>206-555-1584</li>
@@ -41,6 +26,7 @@
     <article>
         <h3>Tokyo</h3>
         <ul>
+            <li><img src="images/frosted-cookie.jpg" height="100" width="160"></li>
             <li>134 Wakarimasen Avenue, Meguro, Tokyo</li>
             <li>Open 6AM-8PM</li>
             <li>+81 784-555-2183</li>
@@ -49,6 +35,7 @@
     <article>
         <h3>Dubai</h3>
         <ul>
+                <li><img src="images/cutter.jpg" height="100" width="160"></li>
             <li>8585 Al Albaany St, Dubai, UAE</li>
             <li>Open 6AM-8PM</li>
             <li>+971 588-555-8955</li>
@@ -57,6 +44,7 @@
     <article>
         <h3>Paris</h3>
         <ul>
+            <li><img src="images//family.jpg" height="100" width="160"></li>
             <li>1884 Baquette Ave, Paris, FR</li>
             <li>Open 6AM-8PM</li>
             <li>+33 204-555-8666</li>
@@ -65,6 +53,7 @@
     <article>
         <h3>Lima</h3>
         <ul>
+            <li><img src="images/fish.jpg" height="100" width="160"></li>
             <li>757 Pisco Llama St, Lima, Peru</li>
             <li>Open 6AM-8PM</li>
             <li>+51 243-555-8664</li>
