--- a/sales.html
+++ b/sales.html
@@ -3,7 +3,7 @@
     <title>Cookie Sales</title>
 </head>
 <html>
-<body>
+<body id="salesBody">
     <table id='container'>
     <!--filled in with JS-->
     </table>
@@ -33,5 +33,6 @@
     </form>
 
     <script src="js/app.js"></script>
+    <link rel="stylesheet" href="css/stylesheet.css">
 </body>
 </html>
